--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "echarts": "^5.5.0",
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
+    "vue-echarts": "^6.6.9",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "next",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "tailwindcss": "next"
   }
 }
